[package]
name = "ed25519-zebra"
version = "0.1.1"
description = "Wrapper around the [ed25519-zebra](https://crates.io/crates/ed25519-zebra) Rust crate"
authors = ["Mason Fischer <mason@kissr.co>"]
repository = "https://github.com/ellipticoin/js-ed25519-zebra"
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde-wasm-bindgen = "0.1.3"
wasm-bindgen = "0.2.68"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
ed25519-zebra = "2"
